<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Botones</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="click">Click</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="icono_ok">icono ok</string>
    <string name="texto_de_prueba">Texto de prueba</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>

</resources>
